--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "这是一个技术博客",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vuepress dev docs",
+    "build": "vuepress build docs"
   },
   "repository": {
     "type": "git",
